# gpui-napi

./: Cargo.toml  package.json
.github/workflows/: CI.yml  build.yml  publish-github.yml
docs/: gpui-items.md  implementation_plan.md  roadmap.md
examples/: animation.ts  demo.ts  drawing_canvas.ts  multiple_windows.ts  transparent_window.ts  window_advanced_features.ts  window_demo.ts  window_options.ts
src/: enums.rs  functions.rs  lib.rs  macros.rs  renderer.rs  structs.rs  traits.rs
src/renderer/: mod.rs
src/renderer/window_manager/: api.rs  app.rs  mod.rs  types.rs  utils.rs
tests/: index.test.ts  renderer.test.ts
