[package]
name = "gpui-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "gpui_napi"

[package.metadata.napi]
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]

[dependencies]
napi = { version = "3.8.2", features = ["napi9", "async"] }
napi-derive = "3.5.1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
# Use winit 0.29 which uses raw-window-handle 0.5
winit = { version = "0.29", features = ["rwh_05"] }
# Using tiny-skia for CPU-based rendering with transparency support
tiny-skia = "0.11"
# For Linux transparency support - using X11 directly
x11 = { version = "2", features = ["xlib", "xrender"] }
# For window surface management
raw-window-handle = "0.5"

[features]
default = []

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
